--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     // Bugly上报
-    implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
+    //implementation 'com.tencent.bugly:crashreport_upgrade:1.3.5'
 
     testImplementation 'junit:junit:4.12'
     implementation 'com.jakewharton:butterknife:8.8.1'
